[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cubes/CubeSet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Arena/Character.gd" type="Script" id=2]
[ext_resource path="res://Arena/Assets/Engel.png" type="Texture" id=3]
[ext_resource path="res://Arena/State.tscn" type="PackedScene" id=4]

[node name="Character" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 283.0
margin_bottom = 59.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Sprite" parent="."]
position = Vector2( 0, -110.5 )
texture = ExtResource( 3 )

[node name="CubeSet" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 49 )

[node name="States" type="Node2D" parent="."]
position = Vector2( 0, 100 )

[node name="State" parent="States" instance=ExtResource( 4 )]

[node name="Stats" type="Node2D" parent="."]
visible = false
position = Vector2( 19.0193, 13.6549 )

[node name="LabelName" type="Label" parent="Stats"]
margin_left = 5.36442
margin_top = -3.41372
margin_right = 141.364
margin_bottom = 10.5863
text = "Demo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHP" type="Label" parent="Stats"]
margin_left = 5.85209
margin_top = 14.1426
margin_right = 76.8521
margin_bottom = 28.1426
text = "Hit points: 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDemon" type="Label" parent="Stats"]
margin_left = 5.85209
margin_top = 30.1426
margin_right = 76.8521
margin_bottom = 44.1426
text = "Demon tokens: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelArmor" type="Label" parent="Stats"]
margin_left = 97.8521
margin_top = 15.1426
margin_right = 168.852
margin_bottom = 29.1426
text = "Armor: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDemonArmor" type="Label" parent="Stats"]
margin_left = 124.852
margin_top = 30.1426
margin_right = 195.852
margin_bottom = 44.1426
text = "Demon Armor: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Node2D" parent="Stats"]
